feat: :sparkles: Add ep to delete a department, add tests
